--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ nvidia-graphics-drivers (304.125-1) UNRELEASED; urgency=medium
       extension protocol requests from being used when RandR was enabled.
   * New upstream legacy 304xx branch release 304.119 (2014-01-23).
     - Fixed a crash when using WebGL in Firefox with a Geforce 6 GPU.
+  * Refresh patches.
   * Add xorg-video-abi-18 as alternative dependency.
   * conftest.h:
     - Implement new conftest.sh function acpi_op_remove (304.123).
