--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-nvidia-graphics-drivers (343.22-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (343.36-1) UNRELEASED; urgency=medium
 
+  * New upstream short lived branch release 343.36 (2014-12-05).
+    - Fixed a bug that rendered very bright garbage data onto some textures
+      in UnrealEngine 4 applications. This issue is known as the "disco bug"
+      by the UnrealEngine 4 Linux community.
   * nvidia-opencl-icd: Restore the Depends: libcuda1.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 02 Dec 2014 00:19:19 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 12 Dec 2014 22:49:17 +0100
 
 nvidia-graphics-drivers (343.22-2) experimental; urgency=medium
 
