--- a/debian/changelog
+++ b/debian/changelog
@@ -12,26 +12,6 @@ nvidia-graphics-drivers (304.125-1) UNRELEASED; urgency=medium
     - Added the "AllowIndirectGLXProtocol" X config option.  This option can
       be used to disallow use of GLX protocol.  See "Appendix B. X Config
       Options" in the README for more details.
-  * New upstream legacy 304xx branch release 304.123 (2014-07-10).
-    - Improved compatibility with recent Linux kernels.
-    - Fixed a bug that could result in system instability while restoring
-      the VGA console.
-    - Fixed an interaction problem with xserver 1.15 that occasionally caused
-      OpenGL applications to continue rendering when they are minimized or
-      unmapped.
-    - Updated nvidia-bug-report.sh to search the systemd journal for X
-      server logs and messages from the NVIDIA kernel module.
-    - Added support for X.org xserver ABI 18 (xorg-server 1.16).
-    - Fixed a bug that caused corruption or blank screens on monitors that use
-      EDID version 1.3 or older when they are connected via DisplayPort on
-      graphics boards that use external DisplayPort encoders, such as the Quadro
-      FX 4800.
-  * New upstream legacy 304xx branch release 304.121 (2014-03-11).
-    - Improved compatibility with recent Linux kernels.
-    - Fixed a bug that prevented the NVIDIA implementation of the Xinerama
-      extension protocol requests from being used when RandR was enabled.
-  * New upstream legacy 304xx branch release 304.119 (2014-01-23).
-    - Fixed a crash when using WebGL in Firefox with a Geforce 6 GPU.
   * Refresh patches.
   * Add xorg-video-abi-19, xorg-video-abi-18 as alternative dependencies.
   * conftest.h:
@@ -52,6 +32,41 @@ nvidia-graphics-drivers (304.125-1) UNRELEASED; urgency=medium
   * Add changelog entries from etch and squeeze updates.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 12 Dec 2014 07:48:43 +0100
+
+nvidia-graphics-drivers (304.123-1) UNRELEASED; urgency=medium
+
+  * New upstream legacy 304xx branch release 304.123 (2014-07-10).
+    - Improved compatibility with recent Linux kernels.
+    - Fixed a bug that could result in system instability while restoring
+      the VGA console.
+    - Fixed an interaction problem with xserver 1.15 that occasionally caused
+      OpenGL applications to continue rendering when they are minimized or
+      unmapped.
+    - Updated nvidia-bug-report.sh to search the systemd journal for X
+      server logs and messages from the NVIDIA kernel module.
+    - Added support for X.org xserver ABI 18 (xorg-server 1.16).
+    - Fixed a bug that caused corruption or blank screens on monitors that use
+      EDID version 1.3 or older when they are connected via DisplayPort on
+      graphics boards that use external DisplayPort encoders, such as the Quadro
+      FX 4800.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 28 Sep 2014 20:46:10 +0200
+
+nvidia-graphics-drivers (304.121-1) UNRELEASED; urgency=medium
+
+  * New upstream legacy 304xx branch release 304.121 (2014-03-11).
+    - Improved compatibility with recent Linux kernels.
+    - Fixed a bug that prevented the NVIDIA implementation of the Xinerama
+      extension protocol requests from being used when RandR was enabled.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Apr 2014 02:02:57 +0200
+
+nvidia-graphics-drivers (304.119-1) UNRELEASED; urgency=medium
+
+  * New upstream legacy 304xx branch release 304.119 (2014-01-23).
+    - Fixed a crash when using WebGL in Firefox with a Geforce 6 GPU.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 15 Feb 2014 16:49:54 +0100
 
 nvidia-graphics-drivers (304.117-1) wheezy; urgency=medium
 
