--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.125-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (304.125-1) wheezy; urgency=medium
 
   * New upstream legacy 304xx branch release 304.125 (2014-12-05).
     * Fixes CVE-2014-8298.  (Closes: #772971)
@@ -31,7 +31,7 @@ nvidia-graphics-drivers (304.125-1) UNRELEASED; urgency=medium
       fault_flags, atomic64_type (346.16).
   * Add changelog entries from etch and squeeze updates.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 12 Dec 2014 07:48:43 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 13 Dec 2014 18:26:09 +0100
 
 nvidia-graphics-drivers (304.123-1) UNRELEASED; urgency=medium
 
