--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.76-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.76-1) unstable; urgency=medium
 
   * New upstream legacy 340xx branch release 340.76 (2015-01-27).
     - Fixed a bug that caused frequent AMD-Vi page faults on systems with
@@ -14,7 +14,7 @@ nvidia-graphics-drivers (340.76-1) UNRELEASED; urgency=medium
     - Implement new conftest.sh functions file_inode, drm_pci_set_busid
       (340.76)
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 05 Feb 2015 09:42:17 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 18 Mar 2015 19:42:13 +0100
 
 nvidia-graphics-drivers (340.65-2) unstable; urgency=medium
 
