--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ nvidia-graphics-drivers (343.36-1) experimental; urgency=medium
     - Fixed a bug that rendered very bright garbage data onto some textures
       in UnrealEngine 4 applications. This issue is known as the "disco bug"
       by the UnrealEngine 4 Linux community.
+  * Merge changes from 340.65-1.
   * nvidia-opencl-icd: Restore the Depends: libcuda1.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 13 Dec 2014 00:55:32 +0100
