add Provides: libcuda-7.0-1{,-i386}
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/346@5293 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -99,6 +99,7 @@ nvidia-graphics-drivers (346.47-1) UNRELEASED; urgency=medium
   * Refresh patches.
   * Update symbols control files.
   * nvidia-opencl-icd: Restore the Depends: libcuda1.
+  * libcuda1: Add Provides: libcuda-7.0-1{,-i386}.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 18 Mar 2015 19:20:36 +0100
 
