--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (340.76-2) UNRELEASED; urgency=medium
+
+  * fixes-for-kernel-4.0.0.patch: New patch to add support for Linux 4.0,
+    thanks to Jessie Frazelle.  (Closes: #781810)
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 10 Apr 2015 01:40:46 +0200
+
 nvidia-graphics-drivers (340.76-1) unstable; urgency=medium
 
   * New upstream legacy 340xx branch release 340.76 (2015-01-27).
