--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ nvidia-graphics-drivers (340.76-2) UNRELEASED; urgency=medium
 
   * fixes-for-kernel-4.0.0.patch: New patch to add support for Linux 4.0,
     thanks to Jessie Frazelle.  (Closes: #781810)
+  * conftest.h:
+    - Implement check for linux/log2.h (346.16).
+    - Implement check for xen/ioemu.h (346.59).
+    - Implement new conftest.sh functions write_cr4, xen_ioemu_inject_msi
+      (346.59), list_cut_position (349.12).
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 10 Apr 2015 01:40:46 +0200
 
