--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.76-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.76-2) unstable; urgency=medium
 
   * fixes-for-kernel-4.0.0.patch: New patch to add support for Linux 4.0,
     thanks to Jessie Frazelle.  (Closes: #781810)
@@ -8,7 +8,7 @@ nvidia-graphics-drivers (340.76-2) UNRELEASED; urgency=medium
     - Implement new conftest.sh functions write_cr4, xen_ioemu_inject_msi
       (346.59), list_cut_position (349.12).
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 10 Apr 2015 01:40:46 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 12 May 2015 20:47:07 +0200
 
 nvidia-graphics-drivers (340.76-1) unstable; urgency=medium
 
