fix conftest.sh function write_cr4
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/346@5324 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (346.72-1) experimental; urgency=medium
       allows for this (the source or destination lines will be overlapping).
       Previously, our implementation of Pixel Buffer Objects did not support
       this case and would throw an error.
+  * Fix conftest.sh function write_cr4.
   * uvm module missing on armhf in 346.xx, causing FTBFS; avoid applying
     debian/modules/debian/patches/uvm-symvers.patch as a workaround.
 
