--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (346.72-1) experimental; urgency=medium
+nvidia-graphics-drivers (346.72-1) UNRELEASED; urgency=medium
 
   * New upstream release 346.72 (2015-05-12).
     - Fixed a bug causing loss of stereo synchronization in certain Quadro
