--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,8 @@ nvidia-graphics-drivers (346.72-1) UNRELEASED; urgency=medium
       this case and would throw an error.
   * Fix conftest.sh function write_cr4.
   * uvm module missing on armhf in 346.xx, causing FTBFS; avoid applying
-    debian/modules/debian/patches/uvm-symvers.patch as a workaround.
+    debian/modules/debian/patches/uvm-symvers.patch on armhf as a workaround.
+  * Apply patch provided by Luca Boccassi, cherrypicked from SteamOS. Thanks!
 
  -- Vincent Cheng <vcheng@debian.org>  Sun, 17 May 2015 23:11:29 -0700
 
