--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (346.72-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (346.72-1) experimental; urgency=medium
 
   * New upstream release 346.72 (2015-05-12).
     - Fixed a bug causing loss of stereo synchronization in certain Quadro
@@ -11,6 +11,7 @@ nvidia-graphics-drivers (346.72-1) UNRELEASED; urgency=medium
       this case and would throw an error.
   * Fix conftest.sh function write_cr4.
   * Apply patch provided by Luca Boccassi, cherrypicked from SteamOS. Thanks!
+  * Fix nvidia module FTBFS with linux >= 4.0. (Closes: #785205)
 
  -- Vincent Cheng <vcheng@debian.org>  Sun, 17 May 2015 23:11:29 -0700
 
