--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,9 @@ nvidia-graphics-drivers (352.21-1) UNRELEASED; urgency=medium
       some X configuration options when a display device name was given
       with a GPU UUID qualifier.
   * Refresh debian/patches/man-fixes-nvidia-smi.patch.
+  * Fix unresolved nvUvm* symbols in nvidia-uvm.ko from dkms package; patch
+    cherrypicked from SteamOS and added as debian/patches/uvm-symvers.patch.
+    (Closes: #789483)
 
   [ Andreas Beckmann ]
   * New upstream release 346.82 (2015-06-23).
