close #793079 in d/changelog
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/352@5363 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 nvidia-graphics-drivers (352.21-1) UNRELEASED; urgency=medium
 
   [ Vincent Cheng ]
-  * New upstream release 352.21 (2015-06-15).
+  * New upstream release 352.21 (2015-06-15). (Closes: #793079)
     - Fixed a bug that caused the kernel to report errors when unmapping
       DMA allocations on kernels with CONFIG_DEBUG_DMA_API enabled.
     - Added GLX Protocol support for the following OpenGL extensions:
