--- a/debian/changelog
+++ b/debian/changelog
@@ -68,6 +68,7 @@ nvidia-graphics-drivers (352.21-1) UNRELEASED; urgency=medium
     Thanks! (Closes: #789483)
   * Various updates to the packaging provided by Luca Boccassi. Thanks!
     - Update nv-readme.ids.
+    - pci.ids and monitoring.conf are no longer shipped by Nvidia.
 
   [ Andreas Beckmann ]
   * New upstream release 346.82 (2015-06-23).
