upload to experimental (finalize changelog)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/352@5373 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (352.21-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.21-1) experimental; urgency=medium
 
   [ Vincent Cheng ]
   * New upstream release 352.21 (2015-06-15). (Closes: #793079)
