--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (352.21-2) UNRELEASED; urgency=medium
+
+  * Add myself to Uploaders
+  * Fix DKMS module build failure on i386 and armhf; patch provided and 
+    inspired by Raphael Hertzog. Thanks! (Closes: #793160)
+
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Fri, 24 Jul 2015 01:39:29 +0100
+
 nvidia-graphics-drivers (352.21-1) experimental; urgency=medium
 
   [ Vincent Cheng ]
