Update changelog, close 793386
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/352@5379 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ nvidia-graphics-drivers (352.21-2) UNRELEASED; urgency=medium
   * Add myself to Uploaders
   * Fix DKMS module build failure on i386 and armhf; patch provided and 
     inspired by Raphael Hertzog. Thanks! (Closes: #793160)
+  * Fix nvidia-modprobe.conf module unload ordering, to stop nvidia-uvm
+    getting stuck until a second modprobe -r nvidia-current is issued.
+    Fix provided by Jö Fahlke. Thanks! (Closes: #793386)
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Fri, 24 Jul 2015 01:39:29 +0100
 
