--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (352.21-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.21-2) experimental; urgency=medium
 
   * Add myself to Uploaders
   * Fix DKMS module build failure on i386 and armhf; patch provided and 
