Updated changelog to close #794075
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/352@5390 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 nvidia-graphics-drivers (352.30-1) UNRELEASED; urgency=medium
 
-  * New upstream release 352.30 (2015-07-28).
+  * New upstream release 352.30 (2015-07-28). (Closes: #794075)
     - Added support for the following GPU: GeForce 910M
     - Fixed a bug that caused poor video post-processing performance in VDPAU
       when operating on a large number of video streams simultaneously.
